fix a few broken ones